modifs css + ajout schema.org

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Site de présentation du travail et des services de la photographe Nina Carducci",
-    "short_name": "Nina Carducci - Photographe",
+    "short_name": "Nina Carducci - Photographe à Bordeaux",
     "start_url": "https://nina-carducci-photographe.com",
     "display": "standalone",
     "background_color": "#ffffff",
